[package]
name = "acoustic_field_viewer"
version = "0.0.1"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camera_controllers = "0.31.0"
piston_window = "0.89.0"
vecmath = "1.0.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.0"
quaternion = "0.4.1"
shader_version = "0.3.0"
conrod = "0.61.1"
conrod_core = "0.69.0"
find_folder = "0.3.0"
conrod_piston = "0.69.0"
rand = "0.7.3"
scarlet = "1.1.0"
